# mygame

./: .gitignore  LICENSE  README.md  TODO.md  game.py  game_enums.py  game_settings.json  game_settings.py  game_stats.py  generate_map.py  ingame_menu.py  lost_screen.py  main.py  map.py  menu.py  pause.py  pyproject.toml  quit_popup.py  requirements.txt  save_games.py  settings.py  temp.py  tile.py  util.py  win_screen.py
assets/: Screencast_20250929_004758.webm
gpu_test/: iso_test.py  main.py  test_driver.py  texture_animation_test.py
linux/: create_execution_env.sh  create_game_exec.sh  update_requirements.sh
save_games/: save_game_1.json
saved_maps/: large.json  quadratic_island.json  saved_map_1.json  saved_map_2.json  saved_map_3.json  saved_map_4.json  saved_map_5.json  saved_map_6.json  saved_map_7.json  saved_map_8.json
settings/: game_settings.json
